# variant-validate-cli

./: Cargo.toml  LICENSE  README.md  test.sh
src/: error.rs  main.rs  record.rs  seq.rs  variant.rs
tests/: many_variants.bam.bai  variants_table.xls
