[package]
name = "vav"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2018"
description = "SNP/InDel support summary from bam based on CIGAR and MD tag."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bam = "^0.1.1"
clap = "3.0.0-beta.2"
regex = "^1.4.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
lazy_static = "^1.4.0"
log = "^0.4.11"
env_logger = "^0.8.2"
