[package]
name = "vav"
version = "0.1.1"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2018"
description = "Validate a SNP/InDel from bam using CIGAR and MD tag."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bam = "^0.1.1"
clap = "3.0.0-beta.2"
regex = "^1.4.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4.11"
env_logger = "^0.8.2"
once_cell = "^1.5.2"
